# vix-calculator

./: .gitattributes  .gitignore  LICENSE  README.md  demo.ipynb  demo_gld.ipynb  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci.yml
data/: cme holidays.csv  desktop.ini  treasury yield curve rates.csv
scripts/: run_backtest.py
src/: __init__.py  backtest.py  fetch_treasury_rates.py  greeks.py  implied_vol.py  preprocess_gld.py  pricing.py  skew.py  vix_index.py
tests/: test_advanced.py  test_gld.py  test_vix_index.py
