[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "vix-calculator"
version = "1.0.0"
description = "VIX-style volatility index calculator for commodity futures and equity/ETF options"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Nicolas Poirier"},
]
keywords = ["vix", "volatility", "options", "derivatives", "quantitative-finance", "structuring"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.20.0",
    "python-dateutil>=2.8.0",
    "scipy>=1.7.0",
    "matplotlib>=3.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pandas-stubs>=2.0.0",
    "types-python-dateutil>=2.9.0",
]
data = [
    "yfinance>=0.2.0",
    "jupyter>=1.0.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
no_strict_optional = true
allow_untyped_defs = true
disable_error_codes = [
    "operator", "index", "arg-type", "return-value",
    "assignment", "union-attr", "attr-defined",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
